	PR gdb/13483 	* gdbtypes.h (BOOL_PTR_CONVERSION_BADNESS): Rename to ... 	(BOOL_CONVERSION_BADNESS): ... this. 	* gdbtypes.c (BOOL_PTR_CONVERSION_BADNESS): Likewise. 	(rank_one_type): Allow all boolean conversions 	permitted by the standard.

* gdb.cp/converts.cc (A::A): Add ctor.
	(A::member_): Add member.
	(enum my_enum): New enumeration.
	(main): Add calls to foo1_7 with various
	permitted arguments.
	* gdb.cp/converts.exp: Add tests for boolean
	conversions permitted by the standard.